--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,25 @@ DerivedData
 
 #CocoaPods
 Pods
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
